3.If-Else_Conditional_Statements/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> statements
Rule 1     statements -> statements statement
Rule 2     statements -> statement
Rule 3     statement -> LET ID ASSIGN expression SEMICOLON
Rule 4     statement -> LET MUT ID ASSIGN expression SEMICOLON
Rule 5     statement -> ID ASSIGN expression SEMICOLON
Rule 6     statement -> IF condition block ELSE block
Rule 7     statement -> IF condition block
Rule 8     block -> LBRACE statements RBRACE
Rule 9     condition -> expression compare_op expression
Rule 10    compare_op -> GT
Rule 11    compare_op -> LT
Rule 12    compare_op -> GE
Rule 13    compare_op -> LE
Rule 14    compare_op -> EQ
Rule 15    compare_op -> NE
Rule 16    expression -> expression PLUS term
Rule 17    expression -> expression MINUS term
Rule 18    expression -> term
Rule 19    term -> term TIMES factor
Rule 20    term -> term DIVIDE factor
Rule 21    term -> factor
Rule 22    factor -> NUMBER
Rule 23    factor -> ID
Rule 24    factor -> LPAREN expression RPAREN

Terminals, with rules where they appear

ASSIGN               : 3 4 5
DIVIDE               : 20
ELSE                 : 6
EQ                   : 14
GE                   : 12
GT                   : 10
ID                   : 3 4 5 23
IF                   : 6 7
LBRACE               : 8
LE                   : 13
LET                  : 3 4
LPAREN               : 24
LT                   : 11
MINUS                : 17
MUT                  : 4
NE                   : 15
NUMBER               : 22
PLUS                 : 16
RBRACE               : 8
RPAREN               : 24
SEMICOLON            : 3 4 5
TIMES                : 19
error                : 

Nonterminals, with rules where they appear

block                : 6 6 7
compare_op           : 9
condition            : 6 7
expression           : 3 4 5 9 9 16 17 24
factor               : 19 20 21
statement            : 1 2
statements           : 1 8 0
term                 : 16 17 18 19 20

Parsing method: LALR

state 0

    (0) S' -> . statements
    (1) statements -> . statements statement
    (2) statements -> . statement
    (3) statement -> . LET ID ASSIGN expression SEMICOLON
    (4) statement -> . LET MUT ID ASSIGN expression SEMICOLON
    (5) statement -> . ID ASSIGN expression SEMICOLON
    (6) statement -> . IF condition block ELSE block
    (7) statement -> . IF condition block

    LET             shift and go to state 3
    ID              shift and go to state 4
    IF              shift and go to state 5

    statements                     shift and go to state 1
    statement                      shift and go to state 2

state 1

    (0) S' -> statements .
    (1) statements -> statements . statement
    (3) statement -> . LET ID ASSIGN expression SEMICOLON
    (4) statement -> . LET MUT ID ASSIGN expression SEMICOLON
    (5) statement -> . ID ASSIGN expression SEMICOLON
    (6) statement -> . IF condition block ELSE block
    (7) statement -> . IF condition block

    LET             shift and go to state 3
    ID              shift and go to state 4
    IF              shift and go to state 5

    statement                      shift and go to state 6

state 2

    (2) statements -> statement .

    LET             reduce using rule 2 (statements -> statement .)
    ID              reduce using rule 2 (statements -> statement .)
    IF              reduce using rule 2 (statements -> statement .)
    $end            reduce using rule 2 (statements -> statement .)
    RBRACE          reduce using rule 2 (statements -> statement .)


state 3

    (3) statement -> LET . ID ASSIGN expression SEMICOLON
    (4) statement -> LET . MUT ID ASSIGN expression SEMICOLON

    ID              shift and go to state 7
    MUT             shift and go to state 8


state 4

    (5) statement -> ID . ASSIGN expression SEMICOLON

    ASSIGN          shift and go to state 9


state 5

    (6) statement -> IF . condition block ELSE block
    (7) statement -> IF . condition block
    (9) condition -> . expression compare_op expression
    (16) expression -> . expression PLUS term
    (17) expression -> . expression MINUS term
    (18) expression -> . term
    (19) term -> . term TIMES factor
    (20) term -> . term DIVIDE factor
    (21) term -> . factor
    (22) factor -> . NUMBER
    (23) factor -> . ID
    (24) factor -> . LPAREN expression RPAREN

    NUMBER          shift and go to state 14
    ID              shift and go to state 15
    LPAREN          shift and go to state 16

    condition                      shift and go to state 10
    expression                     shift and go to state 11
    term                           shift and go to state 12
    factor                         shift and go to state 13

state 6

    (1) statements -> statements statement .

    LET             reduce using rule 1 (statements -> statements statement .)
    ID              reduce using rule 1 (statements -> statements statement .)
    IF              reduce using rule 1 (statements -> statements statement .)
    $end            reduce using rule 1 (statements -> statements statement .)
    RBRACE          reduce using rule 1 (statements -> statements statement .)


state 7

    (3) statement -> LET ID . ASSIGN expression SEMICOLON

    ASSIGN          shift and go to state 17


state 8

    (4) statement -> LET MUT . ID ASSIGN expression SEMICOLON

    ID              shift and go to state 18


state 9

    (5) statement -> ID ASSIGN . expression SEMICOLON
    (16) expression -> . expression PLUS term
    (17) expression -> . expression MINUS term
    (18) expression -> . term
    (19) term -> . term TIMES factor
    (20) term -> . term DIVIDE factor
    (21) term -> . factor
    (22) factor -> . NUMBER
    (23) factor -> . ID
    (24) factor -> . LPAREN expression RPAREN

    NUMBER          shift and go to state 14
    ID              shift and go to state 15
    LPAREN          shift and go to state 16

    expression                     shift and go to state 19
    term                           shift and go to state 12
    factor                         shift and go to state 13

state 10

    (6) statement -> IF condition . block ELSE block
    (7) statement -> IF condition . block
    (8) block -> . LBRACE statements RBRACE

    LBRACE          shift and go to state 21

    block                          shift and go to state 20

state 11

    (9) condition -> expression . compare_op expression
    (16) expression -> expression . PLUS term
    (17) expression -> expression . MINUS term
    (10) compare_op -> . GT
    (11) compare_op -> . LT
    (12) compare_op -> . GE
    (13) compare_op -> . LE
    (14) compare_op -> . EQ
    (15) compare_op -> . NE

    PLUS            shift and go to state 23
    MINUS           shift and go to state 24
    GT              shift and go to state 25
    LT              shift and go to state 26
    GE              shift and go to state 27
    LE              shift and go to state 28
    EQ              shift and go to state 29
    NE              shift and go to state 30

    compare_op                     shift and go to state 22

state 12

    (18) expression -> term .
    (19) term -> term . TIMES factor
    (20) term -> term . DIVIDE factor

    PLUS            reduce using rule 18 (expression -> term .)
    MINUS           reduce using rule 18 (expression -> term .)
    GT              reduce using rule 18 (expression -> term .)
    LT              reduce using rule 18 (expression -> term .)
    GE              reduce using rule 18 (expression -> term .)
    LE              reduce using rule 18 (expression -> term .)
    EQ              reduce using rule 18 (expression -> term .)
    NE              reduce using rule 18 (expression -> term .)
    SEMICOLON       reduce using rule 18 (expression -> term .)
    RPAREN          reduce using rule 18 (expression -> term .)
    LBRACE          reduce using rule 18 (expression -> term .)
    TIMES           shift and go to state 31
    DIVIDE          shift and go to state 32


state 13

    (21) term -> factor .

    TIMES           reduce using rule 21 (term -> factor .)
    DIVIDE          reduce using rule 21 (term -> factor .)
    PLUS            reduce using rule 21 (term -> factor .)
    MINUS           reduce using rule 21 (term -> factor .)
    GT              reduce using rule 21 (term -> factor .)
    LT              reduce using rule 21 (term -> factor .)
    GE              reduce using rule 21 (term -> factor .)
    LE              reduce using rule 21 (term -> factor .)
    EQ              reduce using rule 21 (term -> factor .)
    NE              reduce using rule 21 (term -> factor .)
    SEMICOLON       reduce using rule 21 (term -> factor .)
    RPAREN          reduce using rule 21 (term -> factor .)
    LBRACE          reduce using rule 21 (term -> factor .)


state 14

    (22) factor -> NUMBER .

    TIMES           reduce using rule 22 (factor -> NUMBER .)
    DIVIDE          reduce using rule 22 (factor -> NUMBER .)
    PLUS            reduce using rule 22 (factor -> NUMBER .)
    MINUS           reduce using rule 22 (factor -> NUMBER .)
    GT              reduce using rule 22 (factor -> NUMBER .)
    LT              reduce using rule 22 (factor -> NUMBER .)
    GE              reduce using rule 22 (factor -> NUMBER .)
    LE              reduce using rule 22 (factor -> NUMBER .)
    EQ              reduce using rule 22 (factor -> NUMBER .)
    NE              reduce using rule 22 (factor -> NUMBER .)
    SEMICOLON       reduce using rule 22 (factor -> NUMBER .)
    RPAREN          reduce using rule 22 (factor -> NUMBER .)
    LBRACE          reduce using rule 22 (factor -> NUMBER .)


state 15

    (23) factor -> ID .

    TIMES           reduce using rule 23 (factor -> ID .)
    DIVIDE          reduce using rule 23 (factor -> ID .)
    PLUS            reduce using rule 23 (factor -> ID .)
    MINUS           reduce using rule 23 (factor -> ID .)
    GT              reduce using rule 23 (factor -> ID .)
    LT              reduce using rule 23 (factor -> ID .)
    GE              reduce using rule 23 (factor -> ID .)
    LE              reduce using rule 23 (factor -> ID .)
    EQ              reduce using rule 23 (factor -> ID .)
    NE              reduce using rule 23 (factor -> ID .)
    SEMICOLON       reduce using rule 23 (factor -> ID .)
    RPAREN          reduce using rule 23 (factor -> ID .)
    LBRACE          reduce using rule 23 (factor -> ID .)


state 16

    (24) factor -> LPAREN . expression RPAREN
    (16) expression -> . expression PLUS term
    (17) expression -> . expression MINUS term
    (18) expression -> . term
    (19) term -> . term TIMES factor
    (20) term -> . term DIVIDE factor
    (21) term -> . factor
    (22) factor -> . NUMBER
    (23) factor -> . ID
    (24) factor -> . LPAREN expression RPAREN

    NUMBER          shift and go to state 14
    ID              shift and go to state 15
    LPAREN          shift and go to state 16

    expression                     shift and go to state 33
    term                           shift and go to state 12
    factor                         shift and go to state 13

state 17

    (3) statement -> LET ID ASSIGN . expression SEMICOLON
    (16) expression -> . expression PLUS term
    (17) expression -> . expression MINUS term
    (18) expression -> . term
    (19) term -> . term TIMES factor
    (20) term -> . term DIVIDE factor
    (21) term -> . factor
    (22) factor -> . NUMBER
    (23) factor -> . ID
    (24) factor -> . LPAREN expression RPAREN

    NUMBER          shift and go to state 14
    ID              shift and go to state 15
    LPAREN          shift and go to state 16

    expression                     shift and go to state 34
    term                           shift and go to state 12
    factor                         shift and go to state 13

state 18

    (4) statement -> LET MUT ID . ASSIGN expression SEMICOLON

    ASSIGN          shift and go to state 35


state 19

    (5) statement -> ID ASSIGN expression . SEMICOLON
    (16) expression -> expression . PLUS term
    (17) expression -> expression . MINUS term

    SEMICOLON       shift and go to state 36
    PLUS            shift and go to state 23
    MINUS           shift and go to state 24


state 20

    (6) statement -> IF condition block . ELSE block
    (7) statement -> IF condition block .

    ELSE            shift and go to state 37
    LET             reduce using rule 7 (statement -> IF condition block .)
    ID              reduce using rule 7 (statement -> IF condition block .)
    IF              reduce using rule 7 (statement -> IF condition block .)
    $end            reduce using rule 7 (statement -> IF condition block .)
    RBRACE          reduce using rule 7 (statement -> IF condition block .)


state 21

    (8) block -> LBRACE . statements RBRACE
    (1) statements -> . statements statement
    (2) statements -> . statement
    (3) statement -> . LET ID ASSIGN expression SEMICOLON
    (4) statement -> . LET MUT ID ASSIGN expression SEMICOLON
    (5) statement -> . ID ASSIGN expression SEMICOLON
    (6) statement -> . IF condition block ELSE block
    (7) statement -> . IF condition block

    LET             shift and go to state 3
    ID              shift and go to state 4
    IF              shift and go to state 5

    statements                     shift and go to state 38
    statement                      shift and go to state 2

state 22

    (9) condition -> expression compare_op . expression
    (16) expression -> . expression PLUS term
    (17) expression -> . expression MINUS term
    (18) expression -> . term
    (19) term -> . term TIMES factor
    (20) term -> . term DIVIDE factor
    (21) term -> . factor
    (22) factor -> . NUMBER
    (23) factor -> . ID
    (24) factor -> . LPAREN expression RPAREN

    NUMBER          shift and go to state 14
    ID              shift and go to state 15
    LPAREN          shift and go to state 16

    expression                     shift and go to state 39
    term                           shift and go to state 12
    factor                         shift and go to state 13

state 23

    (16) expression -> expression PLUS . term
    (19) term -> . term TIMES factor
    (20) term -> . term DIVIDE factor
    (21) term -> . factor
    (22) factor -> . NUMBER
    (23) factor -> . ID
    (24) factor -> . LPAREN expression RPAREN

    NUMBER          shift and go to state 14
    ID              shift and go to state 15
    LPAREN          shift and go to state 16

    term                           shift and go to state 40
    factor                         shift and go to state 13

state 24

    (17) expression -> expression MINUS . term
    (19) term -> . term TIMES factor
    (20) term -> . term DIVIDE factor
    (21) term -> . factor
    (22) factor -> . NUMBER
    (23) factor -> . ID
    (24) factor -> . LPAREN expression RPAREN

    NUMBER          shift and go to state 14
    ID              shift and go to state 15
    LPAREN          shift and go to state 16

    term                           shift and go to state 41
    factor                         shift and go to state 13

state 25

    (10) compare_op -> GT .

    NUMBER          reduce using rule 10 (compare_op -> GT .)
    ID              reduce using rule 10 (compare_op -> GT .)
    LPAREN          reduce using rule 10 (compare_op -> GT .)


state 26

    (11) compare_op -> LT .

    NUMBER          reduce using rule 11 (compare_op -> LT .)
    ID              reduce using rule 11 (compare_op -> LT .)
    LPAREN          reduce using rule 11 (compare_op -> LT .)


state 27

    (12) compare_op -> GE .

    NUMBER          reduce using rule 12 (compare_op -> GE .)
    ID              reduce using rule 12 (compare_op -> GE .)
    LPAREN          reduce using rule 12 (compare_op -> GE .)


state 28

    (13) compare_op -> LE .

    NUMBER          reduce using rule 13 (compare_op -> LE .)
    ID              reduce using rule 13 (compare_op -> LE .)
    LPAREN          reduce using rule 13 (compare_op -> LE .)


state 29

    (14) compare_op -> EQ .

    NUMBER          reduce using rule 14 (compare_op -> EQ .)
    ID              reduce using rule 14 (compare_op -> EQ .)
    LPAREN          reduce using rule 14 (compare_op -> EQ .)


state 30

    (15) compare_op -> NE .

    NUMBER          reduce using rule 15 (compare_op -> NE .)
    ID              reduce using rule 15 (compare_op -> NE .)
    LPAREN          reduce using rule 15 (compare_op -> NE .)


state 31

    (19) term -> term TIMES . factor
    (22) factor -> . NUMBER
    (23) factor -> . ID
    (24) factor -> . LPAREN expression RPAREN

    NUMBER          shift and go to state 14
    ID              shift and go to state 15
    LPAREN          shift and go to state 16

    factor                         shift and go to state 42

state 32

    (20) term -> term DIVIDE . factor
    (22) factor -> . NUMBER
    (23) factor -> . ID
    (24) factor -> . LPAREN expression RPAREN

    NUMBER          shift and go to state 14
    ID              shift and go to state 15
    LPAREN          shift and go to state 16

    factor                         shift and go to state 43

state 33

    (24) factor -> LPAREN expression . RPAREN
    (16) expression -> expression . PLUS term
    (17) expression -> expression . MINUS term

    RPAREN          shift and go to state 44
    PLUS            shift and go to state 23
    MINUS           shift and go to state 24


state 34

    (3) statement -> LET ID ASSIGN expression . SEMICOLON
    (16) expression -> expression . PLUS term
    (17) expression -> expression . MINUS term

    SEMICOLON       shift and go to state 45
    PLUS            shift and go to state 23
    MINUS           shift and go to state 24


state 35

    (4) statement -> LET MUT ID ASSIGN . expression SEMICOLON
    (16) expression -> . expression PLUS term
    (17) expression -> . expression MINUS term
    (18) expression -> . term
    (19) term -> . term TIMES factor
    (20) term -> . term DIVIDE factor
    (21) term -> . factor
    (22) factor -> . NUMBER
    (23) factor -> . ID
    (24) factor -> . LPAREN expression RPAREN

    NUMBER          shift and go to state 14
    ID              shift and go to state 15
    LPAREN          shift and go to state 16

    expression                     shift and go to state 46
    term                           shift and go to state 12
    factor                         shift and go to state 13

state 36

    (5) statement -> ID ASSIGN expression SEMICOLON .

    LET             reduce using rule 5 (statement -> ID ASSIGN expression SEMICOLON .)
    ID              reduce using rule 5 (statement -> ID ASSIGN expression SEMICOLON .)
    IF              reduce using rule 5 (statement -> ID ASSIGN expression SEMICOLON .)
    $end            reduce using rule 5 (statement -> ID ASSIGN expression SEMICOLON .)
    RBRACE          reduce using rule 5 (statement -> ID ASSIGN expression SEMICOLON .)


state 37

    (6) statement -> IF condition block ELSE . block
    (8) block -> . LBRACE statements RBRACE

    LBRACE          shift and go to state 21

    block                          shift and go to state 47

state 38

    (8) block -> LBRACE statements . RBRACE
    (1) statements -> statements . statement
    (3) statement -> . LET ID ASSIGN expression SEMICOLON
    (4) statement -> . LET MUT ID ASSIGN expression SEMICOLON
    (5) statement -> . ID ASSIGN expression SEMICOLON
    (6) statement -> . IF condition block ELSE block
    (7) statement -> . IF condition block

    RBRACE          shift and go to state 48
    LET             shift and go to state 3
    ID              shift and go to state 4
    IF              shift and go to state 5

    statement                      shift and go to state 6

state 39

    (9) condition -> expression compare_op expression .
    (16) expression -> expression . PLUS term
    (17) expression -> expression . MINUS term

    LBRACE          reduce using rule 9 (condition -> expression compare_op expression .)
    PLUS            shift and go to state 23
    MINUS           shift and go to state 24


state 40

    (16) expression -> expression PLUS term .
    (19) term -> term . TIMES factor
    (20) term -> term . DIVIDE factor

    PLUS            reduce using rule 16 (expression -> expression PLUS term .)
    MINUS           reduce using rule 16 (expression -> expression PLUS term .)
    GT              reduce using rule 16 (expression -> expression PLUS term .)
    LT              reduce using rule 16 (expression -> expression PLUS term .)
    GE              reduce using rule 16 (expression -> expression PLUS term .)
    LE              reduce using rule 16 (expression -> expression PLUS term .)
    EQ              reduce using rule 16 (expression -> expression PLUS term .)
    NE              reduce using rule 16 (expression -> expression PLUS term .)
    SEMICOLON       reduce using rule 16 (expression -> expression PLUS term .)
    RPAREN          reduce using rule 16 (expression -> expression PLUS term .)
    LBRACE          reduce using rule 16 (expression -> expression PLUS term .)
    TIMES           shift and go to state 31
    DIVIDE          shift and go to state 32


state 41

    (17) expression -> expression MINUS term .
    (19) term -> term . TIMES factor
    (20) term -> term . DIVIDE factor

    PLUS            reduce using rule 17 (expression -> expression MINUS term .)
    MINUS           reduce using rule 17 (expression -> expression MINUS term .)
    GT              reduce using rule 17 (expression -> expression MINUS term .)
    LT              reduce using rule 17 (expression -> expression MINUS term .)
    GE              reduce using rule 17 (expression -> expression MINUS term .)
    LE              reduce using rule 17 (expression -> expression MINUS term .)
    EQ              reduce using rule 17 (expression -> expression MINUS term .)
    NE              reduce using rule 17 (expression -> expression MINUS term .)
    SEMICOLON       reduce using rule 17 (expression -> expression MINUS term .)
    RPAREN          reduce using rule 17 (expression -> expression MINUS term .)
    LBRACE          reduce using rule 17 (expression -> expression MINUS term .)
    TIMES           shift and go to state 31
    DIVIDE          shift and go to state 32


state 42

    (19) term -> term TIMES factor .

    TIMES           reduce using rule 19 (term -> term TIMES factor .)
    DIVIDE          reduce using rule 19 (term -> term TIMES factor .)
    PLUS            reduce using rule 19 (term -> term TIMES factor .)
    MINUS           reduce using rule 19 (term -> term TIMES factor .)
    GT              reduce using rule 19 (term -> term TIMES factor .)
    LT              reduce using rule 19 (term -> term TIMES factor .)
    GE              reduce using rule 19 (term -> term TIMES factor .)
    LE              reduce using rule 19 (term -> term TIMES factor .)
    EQ              reduce using rule 19 (term -> term TIMES factor .)
    NE              reduce using rule 19 (term -> term TIMES factor .)
    SEMICOLON       reduce using rule 19 (term -> term TIMES factor .)
    RPAREN          reduce using rule 19 (term -> term TIMES factor .)
    LBRACE          reduce using rule 19 (term -> term TIMES factor .)


state 43

    (20) term -> term DIVIDE factor .

    TIMES           reduce using rule 20 (term -> term DIVIDE factor .)
    DIVIDE          reduce using rule 20 (term -> term DIVIDE factor .)
    PLUS            reduce using rule 20 (term -> term DIVIDE factor .)
    MINUS           reduce using rule 20 (term -> term DIVIDE factor .)
    GT              reduce using rule 20 (term -> term DIVIDE factor .)
    LT              reduce using rule 20 (term -> term DIVIDE factor .)
    GE              reduce using rule 20 (term -> term DIVIDE factor .)
    LE              reduce using rule 20 (term -> term DIVIDE factor .)
    EQ              reduce using rule 20 (term -> term DIVIDE factor .)
    NE              reduce using rule 20 (term -> term DIVIDE factor .)
    SEMICOLON       reduce using rule 20 (term -> term DIVIDE factor .)
    RPAREN          reduce using rule 20 (term -> term DIVIDE factor .)
    LBRACE          reduce using rule 20 (term -> term DIVIDE factor .)


state 44

    (24) factor -> LPAREN expression RPAREN .

    TIMES           reduce using rule 24 (factor -> LPAREN expression RPAREN .)
    DIVIDE          reduce using rule 24 (factor -> LPAREN expression RPAREN .)
    PLUS            reduce using rule 24 (factor -> LPAREN expression RPAREN .)
    MINUS           reduce using rule 24 (factor -> LPAREN expression RPAREN .)
    GT              reduce using rule 24 (factor -> LPAREN expression RPAREN .)
    LT              reduce using rule 24 (factor -> LPAREN expression RPAREN .)
    GE              reduce using rule 24 (factor -> LPAREN expression RPAREN .)
    LE              reduce using rule 24 (factor -> LPAREN expression RPAREN .)
    EQ              reduce using rule 24 (factor -> LPAREN expression RPAREN .)
    NE              reduce using rule 24 (factor -> LPAREN expression RPAREN .)
    SEMICOLON       reduce using rule 24 (factor -> LPAREN expression RPAREN .)
    RPAREN          reduce using rule 24 (factor -> LPAREN expression RPAREN .)
    LBRACE          reduce using rule 24 (factor -> LPAREN expression RPAREN .)


state 45

    (3) statement -> LET ID ASSIGN expression SEMICOLON .

    LET             reduce using rule 3 (statement -> LET ID ASSIGN expression SEMICOLON .)
    ID              reduce using rule 3 (statement -> LET ID ASSIGN expression SEMICOLON .)
    IF              reduce using rule 3 (statement -> LET ID ASSIGN expression SEMICOLON .)
    $end            reduce using rule 3 (statement -> LET ID ASSIGN expression SEMICOLON .)
    RBRACE          reduce using rule 3 (statement -> LET ID ASSIGN expression SEMICOLON .)


state 46

    (4) statement -> LET MUT ID ASSIGN expression . SEMICOLON
    (16) expression -> expression . PLUS term
    (17) expression -> expression . MINUS term

    SEMICOLON       shift and go to state 49
    PLUS            shift and go to state 23
    MINUS           shift and go to state 24


state 47

    (6) statement -> IF condition block ELSE block .

    LET             reduce using rule 6 (statement -> IF condition block ELSE block .)
    ID              reduce using rule 6 (statement -> IF condition block ELSE block .)
    IF              reduce using rule 6 (statement -> IF condition block ELSE block .)
    $end            reduce using rule 6 (statement -> IF condition block ELSE block .)
    RBRACE          reduce using rule 6 (statement -> IF condition block ELSE block .)


state 48

    (8) block -> LBRACE statements RBRACE .

    ELSE            reduce using rule 8 (block -> LBRACE statements RBRACE .)
    LET             reduce using rule 8 (block -> LBRACE statements RBRACE .)
    ID              reduce using rule 8 (block -> LBRACE statements RBRACE .)
    IF              reduce using rule 8 (block -> LBRACE statements RBRACE .)
    $end            reduce using rule 8 (block -> LBRACE statements RBRACE .)
    RBRACE          reduce using rule 8 (block -> LBRACE statements RBRACE .)


state 49

    (4) statement -> LET MUT ID ASSIGN expression SEMICOLON .

    LET             reduce using rule 4 (statement -> LET MUT ID ASSIGN expression SEMICOLON .)
    ID              reduce using rule 4 (statement -> LET MUT ID ASSIGN expression SEMICOLON .)
    IF              reduce using rule 4 (statement -> LET MUT ID ASSIGN expression SEMICOLON .)
    $end            reduce using rule 4 (statement -> LET MUT ID ASSIGN expression SEMICOLON .)
    RBRACE          reduce using rule 4 (statement -> LET MUT ID ASSIGN expression SEMICOLON .)

